--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <div class="games">
         <a href="gostop.html" class="game-card">
             <h2>Go/Stop <span class="difficulty easy">Easy</span></h2>
-            <p>Tap the spacebar as fast as you can while green, stop immediately when it turns red.</p>
-            <div class="features">Basic tap counting, stop time measurement</div>
+            <p>Tap the spacebar as fast as you can. After 1-15 taps, it turns red. Stop immediately!</p>
+            <div class="features">Tap-based trigger, stop time measurement</div>
         </a>
 
         <a href="gostop2.html" class="game-card">
