Add Go/Stop 3 with cognitive load: stop only when target shape appears in red

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
             color: #fff;
         }
 
+        .difficulty.expert {
+            background: #9b59b6;
+            color: #fff;
+        }
+
         .game-card p {
             color: #aaa;
             font-size: 0.95rem;
@@ -141,6 +146,12 @@
             <h2>Go/Stop 2 <span class="difficulty hard">Hard</span></h2>
             <p>Same as Go/Stop, but with color cycling and hesitation detection. Don't slow down!</p>
             <div class="features">Color cycling, hesitation = fail, timing breakdown</div>
+        </a>
+
+        <a href="gostop3.html" class="game-card">
+            <h2>Go/Stop 3 <span class="difficulty expert">Expert</span></h2>
+            <p>Colors cycle with shapes inside. Stop ONLY when you see the target shape in RED!</p>
+            <div class="features">Cognitive load: must match BOTH shape AND color</div>
         </a>
     </div>
 </body>
